fix aligning books on books list

--- a/src/styles/Book.module.scss
+++ b/src/styles/Book.module.scss
@@ -13,5 +13,6 @@
       margin-left: gutters.$gutter;
       margin-right: gutters.$gutter;
       flex: 1 0 calc(25% - (gutters.$gutter * 2));
+      max-width: calc(25% - (gutters.$gutter * 2));
   }
 }
